test/e2e/fixtures/mapping-simple-ingress/queries.json
[
  {
    "url": "/mapping-simple-ingress/",
    "method": "GET"
  },
  {
    "url": "/need-normalization/../mapping-simple-ingress/",
    "method": "GET"
  }
]
